fix: refine CAD summary list, home tile shadow spacing, wlepki text normalization

--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -1702,8 +1702,8 @@ a[href] {
 .plakaty-a4a3-maly-canon-table {
   width: 100%;
   table-layout: fixed;
-  margin-left: -30px;
-  width: calc(100% + 30px);
+  margin-left: -50px;
+  width: calc(100% + 50px);
 }
 
 .plakaty-a4a3-maly-canon-table th,
